adde route name.

--- a/public/index.html
+++ b/public/index.html
@@ -113,7 +113,7 @@ h1{
                 <button id="1" class="btn" onclick="window.location = `typing-test-javascript-1.1.1`">Typing-Test App</button>
             </div>
             <div>
-                <button id="2" class="btn" onclick="window.location = `To-Do-App-Javascript-1.0.1`">To-Do App</button>
+                <button id="2" class="btn" onclick="window.location = `To-Do-App-Javascript`">To-Do App</button>
             </div>
             <div>
                 <button id="3" class="btn" onclick="window.location = `shoppingCart-javascript`">Shopping-Cart App</button>
