--- a/public/index.html
+++ b/public/index.html
@@ -113,10 +113,10 @@ h1{
                 <button id="1" class="btn" onclick="window.location = `typing-test-javascript-1.1.1`">Typing-Test App</button>
             </div>
             <div>
-                <button id="2" class="btn" onclick="window.location = `To-Do-App-Javascript`">To-Do App</button>
+                <button id="2" class="btn" onclick="window.location = `To-Do-App-Javascript-1.0.1`">To-Do App</button>
             </div>
             <div>
-                <button id="3" class="btn" onclick="window.location = `To-Do-App-Javascript @ f72eb28`">To-Do-App-Javascript @ f72eb28</button>
+                <button id="3" class="btn" onclick="window.location = `shoppingCart-javascript-2.0.0`">shopping-Cart App</button>
             </div>
         </div>
     </div>
