--- a/public/typing-test-javascript-1.1.1/typingTest-typing-modules/typingTest-typing.html
+++ b/public/typing-test-javascript-1.1.1/typingTest-typing-modules/typingTest-typing.html
@@ -12,7 +12,9 @@
 
     <div class="top-container-typing">
         <h1>Test Your Typing Speed!</h1>
+        
         <div class="timer-container" style="display: visible;">
+            <input id="focusMe" type="text" style="display: none;">
             <div class="timer minute">01</div>
             <div class="timer sparater">:</div>
             <div class="timer second">00</div>
