--- a/public/typing-test-javascript-1.1.1/typingTest-typing-modules/typingTest-typing.html
+++ b/public/typing-test-javascript-1.1.1/typingTest-typing-modules/typingTest-typing.html
@@ -14,7 +14,7 @@
         <h1>Test Your Typing Speed!</h1>
         
         <div class="timer-container" style="display: visible;">
-            <input id="focusMe" type="text" style="display: none;">
+            <input id="focusMe" type="text">
             <div class="timer minute">01</div>
             <div class="timer sparater">:</div>
             <div class="timer second">00</div>
